# FamilyHub

./: .gitignore  .replit  404.html  App.tsx  CNAME  FamilyHub-ContentView.swift  FamilyHub-Structure.swift  FamilyHub.swift  FamilyHub_ContentView.swift  Header.tsx  NotificationContext.tsx  README.md  android_setup.md  capacitor.config.ts  firebase-messaging-sw.js  index.html  manifest.json  metadata.json  package-lock.json  package.json  replit.md  setup_webhooks.sql  sql_cleanup_duplicate_tokens.sql  supabase_fix.sql  supabase_fix_rls.sql  supabase_rls_policies.sql  supabase_schema.sql  supabase_upload_guide.md  types.ts  vite.config.ts
android/: capacitor.settings.gradle
assets/: index-1EZQm5o4.js  index-1sGExmvK.js  index-2Y3gme71.js  index-3VrJggtx.js  index-4MVdhLig.js  index-4a8zS8wX.js  index-8lS23mty.js  index-B27Wdk_h.js  index-B3Pgzs44.js  index-BEvAjT8v.js  index-BFdFIxkp.js  index-BHZzqK-_.js  index-BLJ-lh77.js  index-BLJb96z0.js  index-BLNev8BT.js  index-BMdxU-fi.js  index-BOl-qDSQ.js  index-BS9ooVFe.js  index-B_PO7M62.js  index-B_Y9-mO7.js  index-BbhOO3qg.js  index-BeLauCEj.js  index-BklUe30q.js  index-BodxzWDc.js  index-Bp8oEmcz.js  index-BpygqkGY.js  index-Bs2bxmR9.js  index-BvUmJRIM.js  index-Bzpkl7tM.js  index-C-p6O681.js  index-C4J-vIo5.js  index-C5K-eEly.js  index-C5iffFJW.js  index-C8B8H1xl.js  index-C9fbQ1az.js  index-C9ks5BJ5.js  index-CDjldo8k.js  index-CFF30iab.js  index-CKmHfVa0.js  index-CO0U2wYu.js  (+384 more)
attached_assets/: Pasted-index-C9fbQ1az-js-1719-POST-https-hjkmfodzhradtkeiyele-_1775155676889.txt
components/: Header.tsx  ImageCarousel.tsx  Logo.tsx  Navigation.tsx  NotificationModal.tsx  Onboarding.tsx  SlidingTabs.tsx  VoiceAssistant.tsx  capacitor.config.ts
pages/: ActivitiesPage.tsx  CalendarPage.tsx  Dashboard.tsx  LandingPage.tsx  ListsPage.tsx  MealsPage.tsx  SettingsPage.tsx  WeatherPage.tsx
public/: 404.html  firebase-messaging-sw.js  manifest.json
services/: backend.ts  fcm.ts  gemini.ts  imageUtils.ts  nativeCalendar.ts  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .keep  icon.icns
(+46 files in other folders)
